# hwm14

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hwm14_cpp20_port_plan.md
.github/workflows/: ci.yml
cmake/: hwm14Config.cmake.in  sanitizers.cmake  warnings.cmake
docs/: Doxyfile.in  api_usage.md  design_notes.md  licensing.md  numerical_fidelity.md  perf_baseline.md  thread_safety_and_performance.md
examples/: hwm14_batch_cli.cpp  hwm14_cli.cpp
fortran/: alf.f90  dwm.f90  gd2qdc.f90  hwm.f90  hwm14.f90  hwm14_utilities.f90  qwm.f90
include/hwm14/: data_paths.hpp  error.hpp  hwm14.hpp  logging.hpp  result.hpp  types.hpp
include/hwm14/detail/: dwm_loader.hpp  fortran_unformatted.hpp  gd2qd_loader.hpp  hwm_bin_loader.hpp  time_utils.hpp
src/: data_paths.cpp  dwm_loader.cpp  error_utils.cpp  gd2qd_loader.cpp  hwm14.cpp  hwm_bin_loader.cpp  time_utils.cpp
testdata/: golden_dwm07b.csv  golden_profiles.csv
tests/: CMakeLists.txt  hwm14_perf_benchmark.cpp  test_api_smoke.cpp  test_data_paths_smoke.cpp  test_dwm_loader.cpp  test_gd2qd_loader.cpp  test_golden_csv_smoke.cpp  test_golden_dwm_parity.cpp  test_golden_profiles_parity.cpp  test_hwm_bin_loader.cpp  test_model_load_validation.cpp  test_path_search_precedence.cpp  test_time_utils.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: convert_gfortran_to_csv.py  profile_hwm14.sh  validate_package_install.sh
