# Author: watsonryan
# Purpose: Smoke-test targets for hwm14 C++ port scaffolding.

add_executable(hwm14_data_paths_smoke test_data_paths_smoke.cpp)
target_link_libraries(hwm14_data_paths_smoke PRIVATE hwm14)
target_compile_definitions(hwm14_data_paths_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_data_paths_smoke)
hwm14_apply_runtime_flags(hwm14_data_paths_smoke)
add_test(NAME hwm14_data_paths_smoke COMMAND hwm14_data_paths_smoke)

add_executable(hwm14_path_search_precedence test_path_search_precedence.cpp)
target_link_libraries(hwm14_path_search_precedence PRIVATE hwm14)
target_compile_definitions(hwm14_path_search_precedence PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_path_search_precedence)
hwm14_apply_runtime_flags(hwm14_path_search_precedence)
add_test(NAME hwm14_path_search_precedence COMMAND hwm14_path_search_precedence)

add_executable(hwm14_api_smoke test_api_smoke.cpp)
target_link_libraries(hwm14_api_smoke PRIVATE hwm14)
target_compile_definitions(hwm14_api_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_api_smoke)
hwm14_apply_runtime_flags(hwm14_api_smoke)
add_test(NAME hwm14_api_smoke COMMAND hwm14_api_smoke)

add_executable(hwm14_model_load_validation test_model_load_validation.cpp)
target_link_libraries(hwm14_model_load_validation PRIVATE hwm14)
target_compile_definitions(hwm14_model_load_validation PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_model_load_validation)
hwm14_apply_runtime_flags(hwm14_model_load_validation)
add_test(NAME hwm14_model_load_validation COMMAND hwm14_model_load_validation)

add_executable(hwm14_hwm_bin_loader_smoke test_hwm_bin_loader.cpp)
target_link_libraries(hwm14_hwm_bin_loader_smoke PRIVATE hwm14)
target_compile_definitions(hwm14_hwm_bin_loader_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_hwm_bin_loader_smoke)
hwm14_apply_runtime_flags(hwm14_hwm_bin_loader_smoke)
add_test(NAME hwm14_hwm_bin_loader_smoke COMMAND hwm14_hwm_bin_loader_smoke)

add_executable(hwm14_gd2qd_loader_smoke test_gd2qd_loader.cpp)
target_link_libraries(hwm14_gd2qd_loader_smoke PRIVATE hwm14)
target_compile_definitions(hwm14_gd2qd_loader_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_gd2qd_loader_smoke)
hwm14_apply_runtime_flags(hwm14_gd2qd_loader_smoke)
add_test(NAME hwm14_gd2qd_loader_smoke COMMAND hwm14_gd2qd_loader_smoke)

add_executable(hwm14_dwm_loader_smoke test_dwm_loader.cpp)
target_link_libraries(hwm14_dwm_loader_smoke PRIVATE hwm14)
target_compile_definitions(hwm14_dwm_loader_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_dwm_loader_smoke)
hwm14_apply_runtime_flags(hwm14_dwm_loader_smoke)
add_test(NAME hwm14_dwm_loader_smoke COMMAND hwm14_dwm_loader_smoke)

add_executable(hwm14_golden_csv_smoke test_golden_csv_smoke.cpp)
target_compile_definitions(hwm14_golden_csv_smoke PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_golden_csv_smoke)
hwm14_apply_runtime_flags(hwm14_golden_csv_smoke)
add_test(NAME hwm14_golden_csv_smoke COMMAND hwm14_golden_csv_smoke)

add_executable(hwm14_time_utils_smoke test_time_utils.cpp)
target_link_libraries(hwm14_time_utils_smoke PRIVATE hwm14)
hwm14_apply_common_warnings(hwm14_time_utils_smoke)
hwm14_apply_runtime_flags(hwm14_time_utils_smoke)
add_test(NAME hwm14_time_utils_smoke COMMAND hwm14_time_utils_smoke)

add_executable(hwm14_golden_profiles_parity test_golden_profiles_parity.cpp)
target_link_libraries(hwm14_golden_profiles_parity PRIVATE hwm14)
target_compile_definitions(hwm14_golden_profiles_parity PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_golden_profiles_parity)
hwm14_apply_runtime_flags(hwm14_golden_profiles_parity)
add_test(NAME hwm14_golden_profiles_parity COMMAND hwm14_golden_profiles_parity)

add_executable(hwm14_golden_dwm_parity test_golden_dwm_parity.cpp)
target_link_libraries(hwm14_golden_dwm_parity PRIVATE hwm14)
target_compile_definitions(hwm14_golden_dwm_parity PRIVATE HWM14_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
hwm14_apply_common_warnings(hwm14_golden_dwm_parity)
hwm14_apply_runtime_flags(hwm14_golden_dwm_parity)
add_test(NAME hwm14_golden_dwm_parity COMMAND hwm14_golden_dwm_parity)
